<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ResourcesFragment">

        <!-- Add text to fragment -->

        <TextView
            android:id="@+id/txtImagesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_imagesTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtImagesTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_stars"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtStarsLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtStars"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_starsLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtStarWarsBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtStarsLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_starWarsBackground"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtStarwarsBackgroundLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtStarWarsBackground"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_starWarsBackgroundLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtFitnessBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtStarwarsBackgroundLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_fitnessBackground"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtFitnessBackgroundLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtFitnessBackground"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_fitnessBackgroundLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtSpongeBobBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtFitnessBackgroundLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_spongeBobBackground"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtSpongeBobBackgroundLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSpongeBobBackground"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_SpongeBobBackgroundLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtSettingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSpongeBobBackgroundLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_settingsIcon"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtSettingsIconLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSettingsIcon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_settingsIconLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtGarry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSettingsIconLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_garry"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtGarryLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtGarry"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_garryLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtLightsaber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtGarryLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_Lightsaber"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtLightsaberLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLightsaber"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_lightsaberLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtDefaultConfigPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLightsaberLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_defaultConfigPhoto"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtDefaultConfigPhotoLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDefaultConfigPhoto"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_defaultConfigPhotoLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtDefaultGamePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDefaultConfigPhotoLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_defaultGamePhoto"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtDefaultGamePhotoLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDefaultGamePhoto"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_defaultGamePhotoLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtAchievementStatsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDefaultGamePhotoLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_achievementStatisticsIcon"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtAchievementStatsIconLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAchievementStatsIcon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_achievementStatisticsIconLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtSoundsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAchievementStatsIconLink"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_soundsTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/txtCelebration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSoundsTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:autoSizeTextType="uniform"
            android:text="@string/resources_celebration"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/txtCelebrationLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCelebration"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font_main"
            android:text="@string/resources_celebrationLink"
            android:textSize="12sp"
            android:textColor="@color/blue"
            android:autoSizeTextType="uniform"/>


    </RelativeLayout>
</ScrollView>